@@ -496,6 +496,7 @@ ConfigView.section.stats.minutes=min
 ConfigView.section.stats.hours=hr
 ConfigView.section.stats.seconds=sec
 ConfigView.section.stats.savefile=Statistics file name
+ConfigView.section.stats.graph_update_dividers=Display vertical line every 60 updates
 MyTorrentsView.menu.export=&XML Torrent...
 MyTorrentsView.menu.host=&Host...
 ManagerItem.finishing=Finishing
